--- a/pages/tableData/tableData.wxml
+++ b/pages/tableData/tableData.wxml
@@ -26,7 +26,7 @@
 			<view class="weui-grid__label">月度形象</view>
 		</a>
 
-		<a class="weui-grid" bindtap="toDcdb">
+		<a class="weui-grid" bindtap="toZjjk">
 			<view class="weui-grid__icon">
 				<image src="/images/zjjk.png" alt></image>
 			</view>
@@ -47,7 +47,7 @@
 			<view class="weui-grid__label">质量检查</view>
 		</a>
 
-		<a class="weui-grid" bindtap="toDcdb">
+		<a class="weui-grid" bindtap="toSjtj">
 			<view class="weui-grid__icon">
 				<image src="/images/sjtj.png" alt></image>
 			</view>
