--- a/pages/project/project.wxss
+++ b/pages/project/project.wxss
@@ -10,6 +10,17 @@
   padding-bottom: 10rpx;
 }
 
+.search1 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  background-color: white;
+  padding-top: 0rpx;
+  padding-bottom: 0rpx;
+}
+
 /* 按时间搜索和筛选框的样式 */
 .search-date,
 .search-type {
@@ -116,5 +127,8 @@
 #projectImage {
   width: 100%;
   text-align: center;
-  
+}
+
+.projectBack {
+  background-color: #0089dd;
 }
