--- a/pages/leaderboard/leaderboard.wxml
+++ b/pages/leaderboard/leaderboard.wxml
@@ -1,5 +1,5 @@
 <!--pages/charts/charts.wxml-->
-<view class="table">
+<!-- <view class="table">
   <view class="tr bg-w">
     <view class="th">综合排名</view>
     <view class="th">项目个数</view>
@@ -32,4 +32,24 @@
       <view class="td">{{item.monthOutput}}</view>
     </view>
   </block>
+</view> -->
+
+<view class='table-module'>
+  <!-- 左侧固定 -->
+  <view class='left-policy-type'>
+    <view class='empty-box'></view>
+    <view wx:for="{{rankData}}" class='left-col-list' wx:key="{{index}}">
+      <view style="font-size:28rpx;  color: rebeccapurple;font-weight:bolder">{{item.integrated}}</view>
+    </view>
+  </view>
+  <!-- 右侧表格滚动 -->
+  <scroll-view class="scroll-box" scroll-x="true">
+    <view class="scroll-view-item" wx:for="{{titleList}}" wx:for-item="titleItem" wx:for-index="bigindex" wx:key="{{index}}">
+      <view class='company-name'>{{titleItem.title}}</view>
+      <view wx:for="{{titleItem.data}}" wx:for-item="cell"  class='price-box' wx:key="{{index2}}">
+        <view class="price">{{cell}}</view>
+        <!-- <view class="price" style="color:#FF6347" wx:elif="{{cell.price == '缺货'}}">缺货</view> -->
+      </view>
+    </view>
+  </scroll-view>
 </view>
