--- a/pages/tableData/datapages/sjtj/gcbb/gcbb.wxml
+++ b/pages/tableData/datapages/sjtj/gcbb/gcbb.wxml
@@ -1,2 +1,2 @@
 <!--pages/tableData/datapages/sjtj/gcbb/gcbb.wxml-->
-<text>pages/tableData/datapages/sjtj/gcbb/gcbb.wxml</text>
+<web-view src="{{wvUrl}}"></web-view>
