--- a/pages/tableData/datapages/sjtj/gcbb/gcbb.wxss
+++ b/pages/tableData/datapages/sjtj/gcbb/gcbb.wxss
@@ -1,1 +1,38 @@
-/* pages/tableData/datapages/sjtj/gcbb/gcbb.wxss */
+.middle {
+  border:1rpx solid rgb(233, 222, 222);
+  height: 65rpx;
+  margin-top: 15rpx;
+}
+/* 审核列表的样式，主要是为了让上下两个固定框不遮挡列表内容 */
+.chekc-record-list {
+  margin-top: 105rpx;
+  margin-bottom: 20rpx;
+}
+.application-name {
+  width: 675rpx;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow:ellipsis;
+  text-align: left;
+}
+.application-date {
+  font-size: x-small;
+  line-height: 15rpx;
+}
+.application-state {
+  font-size: x-small;
+  line-height: 20rpx;
+}
+.application-name image {
+  width: 30rpx;
+  height: 30rpx;
+  /* vertical-align: middle; */
+}
+.weui-btn {
+  width: 100%;
+  padding: 25rpx 0rpx;
+}
+.weui-form-preview__item {
+  border: 1px solid black;
+
+}
