--- a/pages/tableData/datapages/sjtj/jsjdb/jsjdb.wxml
+++ b/pages/tableData/datapages/sjtj/jsjdb/jsjdb.wxml
@@ -1,2 +1,20 @@
 <!--pages/tableData/datapages/sjtj/jsjdb/jsjdb.wxml-->
-<text>pages/tableData/datapages/sjtj/jsjdb/jsjdb.wxml</text>
+<view class="table">
+  <view class="tr bg-w">
+    <view class="th">项目前期工作</view>
+    <!-- <view class="th">head2</view>
+    <view class="th ">head3</view> -->
+  </view>
+  <block wx:for="{{listData}}" wx:key="{{code}}">
+    <view class="tr bg-g" wx:if="{{index % 2 == 0}}">
+      <view class="td">{{item.code}}</view>
+      <view class="td">{{item.text}}</view>
+      <view class="td">{{item.type}}</view>
+    </view>
+    <view class="tr" wx:else>
+      <view class="td">{{item.code}}</view>
+      <view class="td">{{item.text}}</view>
+      <view class="td">{{item.type}}</view>
+    </view>
+  </block>
+</view>
