--- a/pages/tableData/datapages/sjtj/jsjdb/jsjdb.wxss
+++ b/pages/tableData/datapages/sjtj/jsjdb/jsjdb.wxss
@@ -1,1 +1,31 @@
 /* pages/tableData/datapages/sjtj/jsjdb/jsjdb.wxss */
+.table {
+  border: 0px solid darkgray;
+}
+.tr {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 3rem;
+  align-items: center;
+}
+.td {
+    width:40%;
+    justify-content: center;
+    text-align: center;
+}
+.bg-w{
+  background: snow;
+}
+.bg-g{
+  background: #E6F3F9;
+}
+.th {
+  width: 100%;
+  justify-content: center;
+  background: #f0f0f0;
+  /* color: #fff; */
+  display: flex;
+  height: 3rem;
+  align-items: center;
+}
